--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.billvgn.gameutilities">
-    <uses-permission android:name="android.permission.SET_TIME" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_game_utilities"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_game_utilities_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name=".CCFSLauncherWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/ccfslauncher_widget_info" />
+        </receiver>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".com.billvgn.gameutilities.SetTimeBroadcastReceiver">
+
+        <receiver android:name=".SetTimeBroadcastReceiver">
             <intent-filter>
                 <action android:name="plus" />
                 <action android:name="minus" />
+                <action android:name="refill" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".ExecuteGameBroadcastReceiver" />
     </application>
 
 </manifest>
